--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,26 +1,37 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <style>
-
-      input { display: block; }
-      ul    { list-style: none; }
-
+        .message-bubble {
+            max-width: 70%;
+            padding: 10px 15px;
+            border-radius: 20px;
+            margin-bottom: 10px;
+        }
     </style>
-  </head>
-  <body>
 
-    <ul id="messages"></ul>
-    <form id="chatbox">
-      <textarea></textarea>
-      <input type="submit" value="Send" />
+</head>
+<body>
+
+<div class="container">
+    <ul id="messages" class="list-unstyled"></ul>
+    <form id="chatbox" class="mt-3">
+        <div class="mb-3">
+            <textarea class="form-control" rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Send</button>
     </form>
+</div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script>
-
-      $(function(){
-
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script>
+    $(function(){
         var socket = null;
         var name = "";
         var msgBox = $("#chatbox textarea");
@@ -52,7 +63,7 @@
             alert("Connection has been closed.");
           }
           socket.onmessage = function(e) {
-            messages.append($("<li>").text(e.data));
+            messages.append($("<li class=\"message-bubble bg-primary text-white\">").text(e.data));
           }
         }
 
