--- a/templates/chat.html
+++ b/templates/chat.html
@@ -12,29 +12,50 @@
             max-width: 70%;
             padding: 10px 15px;
             border-radius: 20px;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
         }
+        .message-label {
+            font-size: 0.8rem;
+            /* font-weight: bold; */
+            margin-right: 10px;
+            margin-top: 0.75rem;
+        }
+        textarea {
+            resize: none;
+        }
+        .container {
+            padding-top: 32px;
+            max-width: 700px;
+        }
+
     </style>
 
 </head>
 <body>
 
-<div class="container">
-    <ul id="messages" class="list-unstyled"></ul>
-    <form id="chatbox" class="mt-3">
-        <div class="mb-3">
-            <textarea class="form-control" rows="3"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Send</button>
-    </form>
-</div>
+<main>
+  <div class="container">
+      <div id="messages" class="d-flex flex-column"></div>
+      <form id="chatbox" class="mt-3">
+          <div class="input-group mb-3">
+              <input id="chat-input" class="form-control" placeholder="send message" autofocus required autocomplete="off" aria-label="send message" aria-describedby="send-button"></textarea>
+              <button class="btn btn-outline-primary" type="submit" id="send-button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send" viewBox="0 0 16 16">
+                  <path d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576zm6.787-8.201L1.591 6.602l4.339 2.76z"/>
+                </svg>
+              </button>
+          </div>
+      </form>
+  </div>
+</main>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>
+
     $(function(){
         var socket = null;
         var name = "";
-        var msgBox = $("#chatbox textarea");
+        var msgBox = $("#chatbox input");
         var messages = $("#messages");
 
         $("#chatbox").submit(function(){
@@ -63,7 +84,22 @@
             alert("Connection has been closed.");
           }
           socket.onmessage = function(e) {
-            messages.append($("<li class=\"message-bubble bg-primary text-white\">").text(e.data));
+            let data = JSON.parse(e.data);
+            if (data.sender === name) {
+              // probably vulnerable to XSS
+              messages.append(`
+              <div class="d-flex justify-content-end">
+                <div class="message-bubble bg-primary text-white">${data.message}</li>
+              </div>
+              `);
+            } else {
+              messages.append(`
+              <div class="d-flex justify-content-start">
+                <div class="message-label">${data.sender}</div>
+                <div class="message-bubble bg-light text-dark">${data.message}</li>
+              </div>
+              `);
+            }
           }
         }
 
