static chatbox with upload file button and scrollable messages

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -8,6 +8,11 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <style>
+        .message-container {
+            height: 640px; /* Set the desired height for the messages container */
+            overflow-y: auto; /* Enable vertical scrollbar */
+            scroll-behavior: smooth; /* Smooth scrolling */
+        }
         .message-bubble {
             max-width: 70%;
             padding: 10px 15px;
@@ -27,7 +32,6 @@
             padding-top: 32px;
             max-width: 700px;
         }
-
     </style>
 
 </head>
@@ -35,14 +39,18 @@
 
 <main>
   <div class="container">
-      <div id="messages" class="d-flex flex-column"></div>
-      <form id="chatbox" class="mt-3">
+      <div id="messages" class="message-container d-flex flex-column"></div>
+      <form id="chatbox" class="mt-3" enctype="multipart/form-data">
           <div class="input-group mb-3">
               <input id="chat-input" class="form-control" placeholder="send message" autofocus required autocomplete="off" aria-label="send message" aria-describedby="send-button"></textarea>
               <button class="btn btn-outline-primary" type="submit" id="send-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send" viewBox="0 0 16 16">
                   <path d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576zm6.787-8.201L1.591 6.602l4.339 2.76z"/>
                 </svg>
+              </button>
+              <input type="file" id="file-input" class="form-control" style="display: none;" />
+              <button class="btn btn-outline-primary" type="button" id="upload-button">
+                Upload File
               </button>
           </div>
       </form>
@@ -70,6 +78,17 @@
           msgBox.val("");
           return false;
 
+        });
+
+        $("#upload-button").click(function() {
+          $("#file-input").click();
+        });
+
+        $("#file-input").change(function() {
+          // Handle file upload here
+          var file = $(this).prop("files")[0];
+          // You can send this file via WebSocket
+          console.log("File selected:", file);
         });
 
         if (!window["WebSocket"]) {
@@ -100,6 +119,8 @@
               </div>
               `);
             }
+            // Automatically scroll to the bottom of the messages container
+            messages.scrollTop(messages.prop("scrollHeight"));
           }
         }
 
