--- a/templates/chat.html
+++ b/templates/chat.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat</title>
+    <title>Go Chat</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <style>
         .message-container {
-            height: 640px; /* Set the desired height for the messages container */
+            height: 650px; /* Set the desired height for the messages container */
             overflow-y: auto; /* Enable vertical scrollbar */
             scroll-behavior: smooth; /* Smooth scrolling */
         }
@@ -60,7 +60,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>
 
-    $(function(){
+$(function(){
         var socket = null;
         var name = "";
         var msgBox = $("#chatbox input");
@@ -86,9 +86,28 @@
 
         $("#file-input").change(function() {
           // Handle file upload here
-          var file = $(this).prop("files")[0];
+          const file = $(this).prop("files")[0];
           // You can send this file via WebSocket
           console.log("File selected:", file);
+          if (!file) {
+            alert('Please select a file.');
+            return;
+          }
+          file.arrayBuffer().then((arrayBuffer) => {
+            let metadata = JSON.stringify({name: file.name, type: file.type})
+            let metadataArray = new TextEncoder("utf-8").encode(metadata); // json -> string -> utf-8 array
+            let buf = new Uint8Array(metadataArray.length + 1 + arrayBuffer.byteLength)
+            // metadata
+            buf.set(metadataArray)
+            // seperator char
+            buf.set(new TextEncoder().encode("\x02"), metadataArray.length)
+            // file data
+            buf.set(new Uint8Array(arrayBuffer), metadataArray.length + 1)
+            // wrap with blob to send with websocket
+            const blob = new Blob([buf], {type: file.type});
+            console.log(blob);
+            socket.send(blob)
+          });
         });
 
         if (!window["WebSocket"]) {
@@ -104,18 +123,27 @@
           }
           socket.onmessage = function(e) {
             let data = JSON.parse(e.data);
+            let messageText;
+            if (data.method == "message") {
+                messageText = data.message;
+            }
+            else if (data.method == "file") {
+                const linkColor = data.sender === name ? "link-light" : "link-dark"
+                const fileUrl = window.location.origin + "/" + data.path
+                messageText = `<a class="${linkColor}" href="${fileUrl}">${data.name}</a>`;
+            }
             if (data.sender === name) {
               // no longer vulnerable to XSS!
               messages.append(`
               <div class="d-flex justify-content-end">
-                <div class="message-bubble bg-primary text-white">${data.message}</li>
+                <div class="message-bubble bg-primary text-white">${messageText}</li>
               </div>
               `);
             } else {
               messages.append(`
               <div class="d-flex justify-content-start">
                 <div class="message-label">${data.sender}</div>
-                <div class="message-bubble bg-light text-dark">${data.message}</li>
+                <div class="message-bubble bg-light text-dark">${messageText}</li>
               </div>
               `);
             }
